# ynab-importers

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  app.py  pyproject.toml  secrets.ejson
 .circleci /:  config.yml
.circleci/: ci_scripts.yml  config.yml
.circleci /: config.yml
deploy/: ynab-importer.yml
deploy/k8s/: ynab-importers.yml
deploy/ynab-importers/: Chart.yaml  values.yaml
deploy/ynab-importers/templates/: _helpers.tpl  deployment.yaml
importers/: __init__.py  brim.py  csv.py  plaid.py  splitwise.py  wealthfront.py  wealthica.py
importers/deprecated/: wealthfront.py  wealthica.py
secrets/: __init__.py
