[tool.poetry]
name = "ynab-importers"
version = "0.1.0"
description = ""
authors = ["Benjamin Caldwell <benjamin@bcaldwell.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
ynab-sdk = "^0.2.5"
pandas = "^1.3.3"
schedule = "^1.1.0"
requests = "^2.26.0"
splitwise = "^2.3.0"
python-slugify = "^5.0.2"
plaid-python = "^7.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
